update source from http://code.google.com/p/ratebeerforandroid/source/checkout